Wed Jun 16 15:44:59 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* error.c (rb_bug): existance of _set_abort_behavior() depends on
	  runtime version, not compiler version.

Mon Jun 14 22:36:09 2010  Tanaka Akira  <akr@fsij.org>

	* test/socket/test_socket.rb (test_udp_server): rescue Errno::ENOSYS 
	  for Windows.

	* test/socket/test_nonblock.rb (test_sendmsg_nonblock_error): ditto.

	  [ruby-dev:41597] reported by Masaya Tarui.

Sun Jun 13 04:27:55 2010  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/delegate.rb: Delegate !=, eql? and hash [ruby-core:26139]

Sun Jun 13 02:17:49 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* enc/trans/utf8_mac.trans (buf_apply): fix for patterns
	  whose result is 2 bytes. [ruby-core:30751]

Sun Jun 13 01:40:52 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* time.c (rb_localtime_r2): fix mixed declarations and code.

Sun Jun 13 01:37:40 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/dl/lib/dl.rb: don't require when already loaded.

Sun Jun 13 01:37:08 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/fiddle/closure.c (dealloc): workaround fix for libffi's
	  ffi_closure_free. [ruby-dev:41483] [ruby-dev:41214]

Fri Jun 11 23:21:35 2010  Tanaka Akira  <akr@fsij.org>

	* time.c (init_leap_second_info): check the result of
	  gmtime_with_leapsecond.

Fri Jun 11 22:39:50 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* lib/rubygems/install_update_options.rb
	  (Gem::InstallUpdateOptions#add_install_update_options): deprecate
	  --test option which has not worked.  [ruby-core:21714]
	
	* test/rubygems/test_gem_command_manager.rb: ditto.

Fri Jun 11 22:36:25 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* README: add a note about linking a library whose license is not
	  compatible with Ruby License.  [ruby-core:30662]

Sun Jun  6 19:55:21 2010  Tanaka Akira  <akr@fsij.org>

	* array.c (rb_ary_product): clear uninitialized elements in temporary
	  array.

Sat Jun  5 06:20:57 2010  Eric Hodel  <drbrain@segment7.net>
