@@ -12,7 +12,7 @@
 ************************************************/
 
 #include "ruby.h"
-#include "digest.h"
+#include "../digest.h"
 
 static ID id_digest;
 
