@@ -1,7 +1,7 @@
 /* $RoughId: rmd160init.c,v 1.3 2001/07/13 20:00:43 knu Exp $ */
 /* $Id$ */
 
-#include "digest.h"
+#include "../digest.h"
 #if defined(HAVE_OPENSSL_RIPEMD_H)
 #include "rmd160ossl.h"
 #else
