@@ -1,6 +1,6 @@
 /* $Id$ */
 
-#include "defs.h"
+#include "../defs.h"
 #include "rmd160ossl.h"
 
 void RMD160_Finish(RMD160_CTX *ctx, char *buf) {
