@@ -1,3 +1,8 @@
+Wed Jun 16 18:35:20 2010  Akinori MUSHA  <knu@iDaemons.org>
+
+	* ext/digest: Work around a build problem with VC++ 2010, likely
+	  due to a bug of its cl.exe. [Bug #3231]
+
 Wed Jun 16 15:44:59 2010  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* error.c (rb_bug): existance of _set_abort_behavior() depends on
